# PC_Benchmark

./: CMakeLists.txt
docs/: diagram.puml
include/: aes_throughput.h  compress_throughput.h  config.h  controller.h  disk_sys.h  float_dot.h  integer_mix.h  memory_triad.h  metric_units.h  refs.h  report_csv.h  suite.h  sysinfo.h  testcase.h  timer.h  util.h
src/app/: main.c
src/config/: config_defaults.c  refs.c
src/core/: controller.c  suite.c
src/gui/: app.py
src/modules/: aes_throughput.c  compress_throughput.c  disk_sys.c  float_dot.c  integer_mix.c  memory_triad.c
src/pipeline/: timer.c
src/report/: report_csv.c
src/utils/: sysinfo.c
